Added mechanism to update the iteration count and the key length by user.