@@ -16,40 +16,60 @@
 
 package org.wso2.carbon.security.userstore.jdbc.util;
 
+import org.wso2.carbon.security.caas.user.core.exception.StoreException;
 import org.wso2.carbon.security.caas.user.core.util.PasswordHandler;
 
-import java.nio.CharBuffer;
-import java.nio.charset.StandardCharsets;
-import java.security.MessageDigest;
+import java.nio.charset.Charset;
 import java.security.NoSuchAlgorithmException;
-import java.util.Arrays;
-import javax.xml.bind.DatatypeConverter;
+import java.security.spec.InvalidKeySpecException;
+import java.security.spec.KeySpec;
+import java.util.Base64;
+import java.util.Locale;
+import javax.crypto.SecretKeyFactory;
+import javax.crypto.spec.PBEKeySpec;
 
 /**
  * Default implementation of the password handler.
  */
 public class DefaultPasswordHandler implements PasswordHandler {
 
+    private static final String KEY_FACTORY_ALGO_HEAD = "PBKDF2WithHmac";
+
+    private int iterationCount = 4056;
+    private int keyLength = 256;
 
     /**
      * Hash the given password using given algorithm.
      * @param password Password to be hashed.
      * @param salt Salt to be used to hash the password.
-     * @param hashAlgo Hashing algorithm to be used.
+     * @param hashAlgo Hashing algorithm to be used. (SHA1, SHA224, SHA256, SHA384, SHA512)
      * @return Hash as a <code>String</code>
      * @throws NoSuchAlgorithmException No such algorithm exception.
      */
     @Override
     public String hashPassword(char[] password, String salt, String hashAlgo) throws NoSuchAlgorithmException {
 
-        // Merge the password and salt to a single array.
-        char[] saltedPassword = Arrays.copyOf(password, password.length + salt.length());
-        System.arraycopy(salt.toCharArray(), 0, saltedPassword, password.length, salt.length());
+        String keyFactoryAlgorithm = KEY_FACTORY_ALGO_HEAD + hashAlgo.toUpperCase(Locale.ENGLISH);
 
-        MessageDigest messageDigest = MessageDigest.getInstance(hashAlgo);
-        byte[] hash = messageDigest.digest(StandardCharsets.UTF_8.encode(CharBuffer.wrap(saltedPassword)).array());
+        KeySpec keySpec = new PBEKeySpec(password, salt.getBytes(Charset.forName("UTF-8")), iterationCount,
+                keyLength);
+        SecretKeyFactory secretKeyFactory = SecretKeyFactory.getInstance(keyFactoryAlgorithm);
 
-        // Hash is in hex binary. Convert and return.
-        return DatatypeConverter.printHexBinary(hash);
+        try {
+            byte[] hash = secretKeyFactory.generateSecret(keySpec).getEncoded();
+            return Base64.getEncoder().encodeToString(hash);
+        } catch (InvalidKeySpecException e) {
+            throw new StoreException("Invalid key specification.", e);
+        }
+    }
+
+    @Override
+    public void setIterationCount(int iterationCount) {
+        this.iterationCount = iterationCount;
+    }
+
+    @Override
+    public void setKeyLength(int keyLength) {
+        this.keyLength = keyLength;
     }
 }
